Self/mydevorg/packaged/TimbaSurveys/objects/SurveyResponse__c.object
<CustomObject>
    <fields>
        <fullName>AnswerOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AnswerOption</label>
        <referenceTo>AnswerOption__c</referenceTo>
        <relationshipLabel>SurveyResponses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BooleanResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BooleanResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTimeResponse__c</fullName>
        <label>DateTimeResponse</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NumberResponse__c</fullName>
        <label>NumberResponse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Recipient__c</referenceTo>
        <relationshipLabel>SurveyResponses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseType__c</fullName>
        <label>ResponseType</label>
        <picklist>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StringResponse__c</fullName>
        <label>StringResponse</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyResponses</relationshipLabel>
        <relationshipName>SurveyResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Not_Finish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Not Finish</label>
        <type>Checkbox</type>
    </fields>
    <label>SurveyResponse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>DateTimeResponse__c</columns>
        <columns>StringResponse__c</columns>
        <columns>Recipient__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SurveyResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>